Ensure services actually stop running when requested or the console quits

--- a/add.html
+++ b/add.html
@@ -61,7 +61,7 @@
 <ul>
 <li class="govuk-link"><a href="index.html">Forms</a></li>
 <li class="govuk-link fb-navigation-current"><a href="add.html">Add existing form</a></li>
-<li class="govuk-link "><a href="create.html">Create new form</a></li>
+<li class="govuk-link "><a href="create.html">Create form</a></li>
 </ul>
 </nav>
 </header>
@@ -117,7 +117,7 @@
     </div>
     
     <button type="submit" class="govuk-button" id="addForm">
-      Add
+      Add form
     </button>
     
 <!-- CONTENTS END -->
