--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <ul>
 <li class="govuk-link fb-navigation-current"><a href="index.html">Forms</a></li>
 <li class="govuk-link"><a href="add.html">Add existing form</a></li>
-<li class="govuk-link "><a href="create.html">Create new form</a></li>
+<li class="govuk-link "><a href="create.html">Create form</a></li>
 </ul>
 </nav>
 </header>
