--- a/create.html
+++ b/create.html
@@ -17,7 +17,8 @@
     <meta property="og:image" content="assets/images/govuk-opengraph-image.png">
 </head>
 <body class="govuk-template__body ">
-    <script>document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled');</script>
+    <script>document.body.className = document.body.className ? `${document.body.className} js-enabled` : 'js-enabled'
+</script>
     <a href="#main-content" class="govuk-skip-link">Skip to main content</a>
     <header class="fb-editor-header--wrapper">
         <div class="fb-editor-header">
@@ -101,203 +102,202 @@
     </div>
     <script src="assets/govuk-frontend-design-system.min.js"></script>
     <script>
-    const { execSync } = require('child_process')
-    const { app } = require('./app.js')
-    const { git } = app
-    const { pathExists, isDirectory, glob, request } = app.utils
+    const {execSync} = require('child_process')
+    const {app} = require('./app.js')
+    const {git} = app
+    const {pathExists, isDirectory, glob, request} = app.utils
     const path = require('path')
 
-    function createErrorMessage(e, serviceName) {
-        let errorMessage
+    function createErrorMessage (e, serviceName) {
+      let errorMessage
 
-        const {
-            error
-        } = e
+      const {
+        error
+      } = e
 
-        /**
+      /**
          *  Expected structure
          */
-        if (error) {
-            const {
-                errors: [{
-                    /**
+      if (error) {
+        const {
+          errors: [{
+            /**
                      *  Default if not conforming to expected structure
                      */
-                    message = 'No error message defined'
-                } = {}] = []
-            } = error
+            message = 'No error message defined'
+          } = {}] = []
+        } = error
 
-            errorMessage = (message === 'name already exists on this account') // eslint-disable-line no-extra-parens
-                ?
-                `${serviceName} already exists on this account` :
-                message
-        } else {
-            /**
+        errorMessage = (message === 'name already exists on this account') // eslint-disable-line no-extra-parens
+          ? `${serviceName} already exists on this account`
+          : message
+      } else {
+        /**
              *  Unexpected structure. Let's be defensive
              */
-            const {
-                /**
+        const {
+          /**
                  *  Default if not an `HTTPError`
                  */
-                code = 'Unknown Error'
-            } = e
+          code = 'Unknown Error'
+        } = e
 
-            if (code === 'HTTPError') {
-                const {
-                    data: {
-                        statusCode,
-                        statusMessage
-                    } = {}
-                } = e
+        if (code === 'HTTPError') {
+          const {
+            data: {
+              statusCode,
+              statusMessage
+            } = {}
+          } = e
 
-                errorMessage = `${statusCode} ${statusMessage} ("Settings" configuration error)`
-            } else {
-                const {
-                    /**
+          errorMessage = `${statusCode} ${statusMessage} ("Settings" configuration error)`
+        } else {
+          const {
+            /**
                      *  Invalid structure, so default
                      */
-                    message = 'No error message defined'
-                } = e
+            message = 'No error message defined'
+          } = e
 
-                errorMessage = `${code} ${message}`
-            }
+          errorMessage = `${code} ${message}`
         }
+      }
 
-        return errorMessage
+      return errorMessage
     }
 
     const addError = (errorMessage) => {
-        document.querySelector('.govuk-error-summary').classList.remove('js-hidden')
-        document.querySelector('.govuk-form-group-target').classList.add('govuk-form-group--error')
-        document.querySelector('.govuk-input-target').classList.add('govuk-input--error')
-        document.querySelector('#errorMessage').innerHTML = errorMessage
-        document.querySelector('.govuk-error-message').innerHTML = errorMessage
+      document.querySelector('.govuk-error-summary').classList.remove('js-hidden')
+      document.querySelector('.govuk-form-group-target').classList.add('govuk-form-group--error')
+      document.querySelector('.govuk-input-target').classList.add('govuk-input--error')
+      document.querySelector('#errorMessage').innerHTML = errorMessage
+      document.querySelector('.govuk-error-message').innerHTML = errorMessage
     }
 
     const removeError = () => {
-        document.querySelector('.govuk-error-summary').classList.add('js-hidden')
-        document.querySelector('.govuk-form-group-target').classList.remove('govuk-form-group--error')
-        document.querySelector('.govuk-input-target').classList.remove('govuk-input--error')
+      document.querySelector('.govuk-error-summary').classList.add('js-hidden')
+      document.querySelector('.govuk-form-group-target').classList.remove('govuk-form-group--error')
+      document.querySelector('.govuk-input-target').classList.remove('govuk-input--error')
     }
 
     const $input = document.querySelector('.govuk-input-target')
     $input.addEventListener('focus', removeError)
     $input.addEventListener('keypress', (e) => {
-        if (!e.key.match(/[a-z0-9-_]/i)) {
-            e.preventDefault()
-        }
+      if (!e.key.match(/[a-z0-9-_]/i)) {
+        e.preventDefault()
+      }
     })
 
     const createService = async (serviceName, createRepo) => {
-        serviceName = serviceName.replace(/\s/g, '-')
-        const newServicePath = path.join(app.paths.services, serviceName)
-        if (pathExists.sync(newServicePath)) {
-            throw (`${serviceName} already exists`)
-        }
-        app.notify(`Creating ${serviceName}`, { phase: 'Create form' })
+      serviceName = serviceName.replace(/\s/g, '-')
+      const newServicePath = path.join(app.paths.services, serviceName)
 
-        const dir = newServicePath
+      if (pathExists.sync(newServicePath)) throw new Error(`${serviceName} already exists`)
 
-        app.notify('Cloning fb-service-starter repo')
+      app.notify(`Creating ${serviceName}`, {phase: 'Create form'})
 
-        await git.clone({
+      const dir = newServicePath
+
+      app.notify('Cloning fb-service-starter repo')
+
+      await git.clone({
+        dir,
+        url: 'https://github.com/ministryofjustice/fb-service-starter',
+        singleBranch: true,
+        depth: 1
+      })
+
+      const gitDir = path.join(newServicePath, '.git')
+      execSync(`rm -rf ${gitDir}`)
+
+      await git.init({dir})
+
+      app.setService(serviceName)
+
+      const files = glob.sync(`${dir}/**/*`, {dot: true})
+        .filter(file => !isDirectory(file))
+        .filter(file => !file.includes('.git/'))
+      app.notify(`About to add ${dir}`)
+      const addFile = async (filepath) => {
+        filepath = filepath.replace(`${dir}/`, '')
+        try {
+          await git.add({
             dir,
-            url: 'https://github.com/ministryofjustice/fb-service-starter',
-            singleBranch: true,
-            depth: 1
+            filepath
+          })
+        } catch (e) {
+          // ignore attempts to add ignored files
+        }
+      }
+      await Promise.all(files.map(addFile))
+
+      const gitSettings = app.store.get('git')
+      const {name, email, user, token} = gitSettings
+
+      await git.commit({
+        dir,
+        author: {
+          name,
+          email
+        },
+        message: 'Created form'
+      })
+
+      app.notify(`Created ${serviceName}`)
+
+      if (!createRepo) {
+        app.dismissNotification()
+        return
+      }
+
+      app.notify(`Creating ${serviceName} repository`)
+
+      const url = 'https://api.github.com/user/repos'
+      const json = {
+        name: serviceName,
+        auto_init: false,
+        private: false
+      }
+
+      try {
+        await request.post({
+          url,
+          headers: {
+            'User-Agent': 'Form Builder v0.1.0',
+            Authorization: `token ${token}`
+          },
+          json
         })
+      } catch (e) {
+        throw new Error(createErrorMessage(e, serviceName))
+      }
 
-        const gitDir = path.join(newServicePath, '.git')
-        execSync(`rm -rf ${gitDir}`)
-
-        await git.init({ dir })
-
-        app.setService(serviceName)
-
-        const files = glob.sync(`${dir}/**/*`, { dot: true })
-            .filter(file => !isDirectory(file))
-            .filter(file => !file.includes('.git/'))
-        app.notify(`About to add ${dir}`)
-        const addFile = async (filepath) => {
-            filepath = filepath.replace(dir + '/', '')
-            try {
-                await git.add({
-                    dir,
-                    filepath
-                })
-            } catch (e) {
-                // ignore attempts to add ignored files
-            }
-        }
-        await Promise.all(files.map(addFile))
-
-        const gitSettings = app.store.get('git')
-        const { name, email, user, token } = gitSettings
-
-        await git.commit({
-            dir,
-            author: {
-                name,
-                email
-            },
-            message: 'Created form'
+      try {
+        await git.addRemote({
+          dir,
+          remote: 'origin',
+          url: `https://github.com/${user}/${serviceName}.git`
         })
+      } catch (e) {
+        app.dismissNotification()
 
-        app.notify(`Created ${serviceName}`)
+        throw new Error(createErrorMessage(e, serviceName))
+      }
 
-        if (!createRepo) {
-            app.dismissNotification()
-            return
-        }
+      try {
+        await git.push({
+          dir,
+          remote: 'origin',
+          ref: 'master',
+          token
+        })
+      } catch (e) {
+        app.dismissNotification()
 
-        app.notify(`Creating ${serviceName} repository`)
+        throw new Error(createErrorMessage(e, serviceName))
+      }
 
-        let url = 'https://api.github.com/user/repos'
-        const json = {
-            name: serviceName,
-            auto_init: false,
-            private: false
-        }
-
-        try {
-            await request.post({
-                url,
-                headers: {
-                    'User-Agent': 'Form Builder v0.1.0',
-                    Authorization: `token ${token}`
-                },
-                json
-            })
-        } catch (e) {
-            throw new Error(createErrorMessage(e, serviceName))
-        }
-
-        try {
-            await git.addRemote({
-                dir,
-                remote: 'origin',
-                url: `https://github.com/${user}/${serviceName}.git`
-            })
-        } catch (e) {
-            app.dismissNotification()
-
-            throw new Error(createErrorMessage(e, serviceName))
-        }
-
-        try {
-            await git.push({
-                dir,
-                remote: 'origin',
-                ref: 'master',
-                token
-            })
-        } catch (e) {
-            app.dismissNotification()
-
-            throw new Error(createErrorMessage(e, serviceName))
-        }
-
-        app.notify(`Created ${serviceName} repository`, { dismiss: true })
+      app.notify(`Created ${serviceName} repository`, {dismiss: true})
     }
 
     const $createForm = document.getElementById('createForm')
@@ -305,38 +305,38 @@
     const $createRepoGroup = document.querySelector('.createrepo-group')
     const $gitInstructions = document.getElementById('gitInstructions')
     $createForm.addEventListener('click', () => {
-        const $formname = document.getElementById('formname')
-        const formname = $formname.value
-        if (formname) {
-            const createRepo = $createRepo.checked
-            createService(formname, createRepo)
-                .then(() => {
-                    document.location.href = 'index.html'
-                })
-                .catch(err => {
-                    addError(err)
-                })
-        } else {
-            addError('Enter a name for the new form')
-        }
+      const $formname = document.getElementById('formname')
+      const formname = $formname.value
+      if (formname) {
+        const createRepo = $createRepo.checked
+        createService(formname, createRepo)
+          .then(() => {
+            document.location.href = 'index.html'
+          })
+          .catch(err => {
+            addError(err)
+          })
+      } else {
+        addError('Enter a name for the new form')
+      }
     })
 
     const gitStore = app.store.get('git') || {}
     const gitSettings = ['name', 'email', 'user', 'token']
     let gitRequirementsMet = true
     gitSettings.forEach(setting => {
-        if (!gitStore[setting]) {
-            gitRequirementsMet = false
-        }
+      if (!gitStore[setting]) {
+        gitRequirementsMet = false
+      }
     })
     const hideElement = ($el) => {
-        $el.style = 'display:none'
+      $el.style = 'display:none'
     }
 
     if (gitRequirementsMet) {
-        hideElement($gitInstructions)
+      hideElement($gitInstructions)
     } else {
-        hideElement($createRepoGroup)
+      hideElement($createRepoGroup)
     }
     </script>
 </body>
