--- a/notification.html
+++ b/notification.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <title>Installing…</title>
-    <!-- <link rel="stylesheet" href="assets/govuk-frontend-0.0.31-alpha.min.css"> -->
-<link rel="stylesheet" href="assets/govuk-frontend-1.3.0.min.css">
-<!-- <link rel="stylesheet" href="app.css"> -->
+<link rel="stylesheet" href="assets/govuk-frontend-3.4.0.min.css">
     <style>
     html, body {
       background: rgba(0, 0, 0, 0);
@@ -91,7 +89,7 @@
       }
       */
       // You can also require other files to run in this process
-      // 
+      //
       const notification = require('./notification.js')
     </script>
   </body>
