--- a/run-service.html
+++ b/run-service.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
   </head>
   <body>
     <h1>Hidden window to run services as background process</h1>
