--- a/settings.html
+++ b/settings.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
-<html lang="en" class="govuk-template ">
+<html lang="en" class="govuk-template">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <title>Form Builder - Settings</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#0b0c0c" />
+    <meta name="theme-color" content="#0b0c0c">
 
-
-      <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon" />
+      <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
       <link rel="mask-icon" href="assets/images/govuk-mask-icon.svg" color="#0b0c0c">
       <link rel="apple-touch-icon" sizes="180x180" href="assets/images/govuk-apple-touch-icon-180x180.png">
       <link rel="apple-touch-icon" sizes="167x167" href="assets/images/govuk-apple-touch-icon-167x167.png">
       <link rel="apple-touch-icon" sizes="152x152" href="assets/images/govuk-apple-touch-icon-152x152.png">
       <link rel="apple-touch-icon" href="assets/images/govuk-apple-touch-icon.png">
 
-
-
-<link rel="stylesheet" href="assets/govuk-frontend-0.0.31-alpha.min.css">
-<link rel="stylesheet" href="assets/govuk-frontend-1.3.0.min.css">
+<link rel="stylesheet" href="assets/govuk-frontend-3.4.0.min.css">
 <link rel="stylesheet" href="app.css">
 
     <meta property="og:image" content="assets/images/govuk-opengraph-image.png">
