First JS into `lib`

--- a/add.html
+++ b/add.html
@@ -133,7 +133,7 @@
 
 <script src="assets/govuk-frontend-design-system.min.js"></script>
     <script>
-      const {app} = require('./app.js')
+      const {app} = require('./lib/app')
       const {git} = app
       const path = require('path')
       const ipc = require('electron-better-ipc')
