--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
 <script src="assets/govuk-frontend-design-system.min.js"></script>
     <script>
-      const {app} = require('./app.js')
+      const {app} = require('./lib/app')
       const {ipcRenderer} = require('electron-better-ipc')
 
       const hideElement = ($el) => {
