--- a/run-service.html
+++ b/run-service.html
@@ -6,7 +6,10 @@
   <body>
     <h1>Hidden window to run services as background process</h1>
     <script>
-      const runService = require('./run-service.js')
+      /*
+       *  App
+       */
+      require('./lib/run-service')
     </script>
   </body>
 </html>
