--- a/notification.html
+++ b/notification.html
@@ -78,19 +78,9 @@
   </div>
     <script>
       /*
-      const disableHeader = () => {
-        document.querySelector('.pane').className += ' pane--short'
-      }
-      const updatePhase = (msg) => {
-        document.getElementById('consoleInstallerPhase').innerHTML = msg
-      }
-      const updateMessage = (msg) => {
-        document.getElementById('consoleInstallerMessage').innerHTML = msg
-      }
-      */
-      // You can also require other files to run in this process
-      //
-      const notification = require('./notification.js')
+       *  Add
+       */
+      require('./lib/notification')
     </script>
   </body>
 </html>
