More JS into `lib`

--- a/create.html
+++ b/create.html
@@ -16,8 +16,9 @@
     <meta property="og:image" content="assets/images/govuk-opengraph-image.png">
 </head>
 <body class="govuk-template__body ">
-    <script>document.body.className = document.body.className ? `${document.body.className} js-enabled` : 'js-enabled'
-</script>
+    <script>
+      document.body.className = document.body.className ? `${document.body.className} js-enabled` : 'js-enabled'
+    </script>
     <a href="#main-content" class="govuk-skip-link">Skip to main content</a>
     <header class="fb-editor-header--wrapper">
         <div class="fb-editor-header">
