--- a/installation.html
+++ b/installation.html
@@ -9,7 +9,7 @@
     /*
      *  App
      */
-    require('./lib/installation.js')
+    require('./lib/installation')
   </script>
   </body>
 </html>
