--- a/create.html
+++ b/create.html
@@ -15,9 +15,9 @@
     <link rel="stylesheet" href="app.css">
     <meta property="og:image" content="assets/images/govuk-opengraph-image.png">
 </head>
-<body class="govuk-template__body ">
+<body class="govuk-template__body">
     <script>
-      document.body.className = document.body.className ? `${document.body.className} js-enabled` : 'js-enabled'
+      document.body.className = document.body.className ? `${document.body.className.trim()} js-enabled` : 'js-enabled'
     </script>
     <a href="#main-content" class="govuk-skip-link">Skip to main content</a>
     <header class="fb-editor-header--wrapper">
