--- a/add.html
+++ b/add.html
@@ -18,9 +18,9 @@
 
     <meta property="og:image" content="assets/images/govuk-opengraph-image.png">
   </head>
-  <body class="govuk-template__body ">
+  <body class="govuk-template__body">
         <script>
-      document.body.className = document.body.className ? `${document.body.className} js-enabled` : 'js-enabled'
+      document.body.className = document.body.className ? `${document.body.className.trim()} js-enabled` : 'js-enabled'
     </script>
 
 
