--- a/create.html
+++ b/create.html
@@ -11,8 +11,7 @@
     <link rel="apple-touch-icon" sizes="167x167" href="assets/images/govuk-apple-touch-icon-167x167.png">
     <link rel="apple-touch-icon" sizes="152x152" href="assets/images/govuk-apple-touch-icon-152x152.png">
     <link rel="apple-touch-icon" href="assets/images/govuk-apple-touch-icon.png">
-    <link rel="stylesheet" href="assets/govuk-frontend-3.4.0.min.css">
-    <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="assets/stylesheets/create-0.5.5.css">
     <meta property="og:image" content="assets/images/govuk-opengraph-image.png">
 </head>
 <body class="govuk-template__body">
@@ -100,7 +99,7 @@
             </div>
         </main>
     </div>
-    <script src="assets/govuk-frontend-design-system.min.js"></script>
+    <script src="assets/javascripts/app-0.5.5.js"></script>
     <script>
       /*
        *  App
