--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
       <link rel="apple-touch-icon" sizes="152x152" href="assets/images/govuk-apple-touch-icon-152x152.png">
       <link rel="apple-touch-icon" href="assets/images/govuk-apple-touch-icon.png">
 
-
-
-<link rel="stylesheet" href="assets/govuk-frontend-3.4.0.min.css">
-<link rel="stylesheet" href="app.css">
+<link rel="stylesheet" href="assets/stylesheets/app-0.5.5.css">
 
     <meta property="og:image" content="assets/images/govuk-opengraph-image.png">
   </head>
@@ -129,7 +126,7 @@
   </div>
 
 
-<script src="assets/govuk-frontend-design-system.min.js"></script>
+    <script src="assets/javascripts/app-0.5.5.js"></script>
     <script>
       /*
        *  App
