--- a/settings.html
+++ b/settings.html
@@ -13,8 +13,7 @@
       <link rel="apple-touch-icon" sizes="152x152" href="assets/images/govuk-apple-touch-icon-152x152.png">
       <link rel="apple-touch-icon" href="assets/images/govuk-apple-touch-icon.png">
 
-<link rel="stylesheet" href="assets/govuk-frontend-3.4.0.min.css">
-<link rel="stylesheet" href="app.css">
+<link rel="stylesheet" href="assets/stylesheets/settings-0.5.5.css">
 
     <meta property="og:image" content="assets/images/govuk-opengraph-image.png">
   </head>
@@ -192,8 +191,8 @@
     </main>
   </div>
 
-
-<script src="assets/govuk-frontend-design-system.min.js"></script>
+    <script src="assets/javascripts/app-0.5.5.js"></script>
+    <script src="assets/govuk-frontend-design-system.min.js"></script>
     <script>
       /*
        *  App
